新增用户和游戏应用统计接口
