# gateway-service/openapi.yaml
@@ -62,6 +62,19 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/gateway.v1.LoginReply'
+    /v1/user_game_app_stats:
+        get:
+            tags:
+                - GatewayService
+            description: 用户和游戏统计接口
+            operationId: GatewayService_GetUserGameAppStats
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/gateway.v1.GetUserGameAppStatsReply'
     /v1/users:
         post:
             tags:
@@ -120,6 +133,13 @@ components:
             properties:
                 gameApp:
                     $ref: '#/components/schemas/gateway.v1.GameAppInfo'
+        gateway.v1.GetUserGameAppStatsReply:
+            type: object
+            properties:
+                totalUsers:
+                    type: string
+                totalGameApps:
+                    type: string
         gateway.v1.GetUserReply:
             type: object
             properties:
